# backend_django

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose-dev.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
apps/api/v1/: pagination.py  urls.py
apps/api/v1/users/: views.py  (+2 more)
apps/dealers/: admin.py  apps.py  crud.py  filters.py  forms.py  models.py  services.py  urls.py  views.py
apps/dealers/migrations/: 0001_initial.py  0002_auto_20231128_1528.py  0003_dealerkey_unique_pair_dealer_and_key.py  0004_alter_dealer_options_alter_dealerkey_options.py  0005_match_match_unique_pair_key_and_product.py  0006_alter_match_options_remove_match_metrics_and_more.py  0007_dealerkey_created_at_dealerkey_edited_at.py
apps/prices/: admin.py  apps.py  crud.py  models.py  services.py  urls.py  views.py
apps/products/: admin.py  crud.py  models.py
apps/services/: fixtures.py  fixtures_parser.py  match_service.py
apps/users/: admin.py  models.py  serializers.py
config/: constants.py  settings.py  urls.py
deploy/: docker-compose.yml  nginx.conf
presentation/: README.md
static/fixtures/: marketing_dealer.csv  marketing_dealerprice_copy.csv  marketing_product.csv  marketing_productdealerkey.csv
templates/: base.html
templates/dealers/: details.html  index.html  report.html
templates/includes/: footer.html  header.html  pagination.html
templates/users/: login.html
tests/: fixtures.py  test_00_users.py  test_01_dealers.py  test_02_products.py  test_03_keys.py  test_04_prices.py  utils.py
(+27 files in other folders)
